--- a/Client.xcodeproj/xcshareddata/xcschemes/Ecosia.xcscheme
+++ b/Client.xcodeproj/xcshareddata/xcschemes/Ecosia.xcscheme
@@ -150,6 +150,11 @@
                BlueprintName = "StorageTests"
                ReferencedContainer = "container:Client.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "TestSQLiteHistory/testDomainUpgrade()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
          <TestableReference
             skipped = "NO">
@@ -161,6 +166,9 @@
                ReferencedContainer = "container:Client.xcodeproj">
             </BuildableReference>
             <SkippedTests>
+               <Test
+                  Identifier = "CustomSearchEnginesTest">
+               </Test>
                <Test
                   Identifier = "DefaultSearchPrefsTests">
                </Test>
