--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: bootstrap MOZ App Services
       run: ./carthage_bootstrap_moz_services.sh
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Restore ruby gem cache
       uses: actions/cache@v1
       with:
