--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -18,7 +18,7 @@ jobs:
     - name: "Carthage Bootstrap"
       uses: devbotsxyz/carthage-bootstrap@main
       env: 
-        XCODE_XCCONFIG_FILE: ${{ XCODE_XCCONFIG_FILE }}
+        XCODE_XCCONFIG_FILE: $XCODE_XCCONFIG_FILE
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         platform: ios
