--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
+        ruby-version: 2.6
         bundler-cache: true
     - uses: actions/cache@v2
       id: cache-npm
