--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -5,14 +5,26 @@ on:
     branches: [ fix-unit-tests-2 ]
   pull_request:
     branches: [ main ]
+  env:
+    DEVELOPER_DIR: /Applications/Xcode_12.4.app
 
 jobs:
   test:
-
     runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/cache@v2
+      id: cache-pip
+      with:
+        path: ~/Library/Caches/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    - name: install pip modules
+      if: steps.cache-pip.outputs.cache-hit != 'true'
+      run: |
+         python3.7 -m pip install virtualenv
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7
