--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -12,7 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
+    - name: retore pip cache
+      uses: actions/cache@v2
       id: cache-pip
       with:
         path: ~/Library/Caches/pip
@@ -23,11 +24,13 @@ jobs:
       if: steps.cache-pip.outputs.cache-hit != 'true'
       run: |
          python3 -m pip install virtualenv
-    - uses: ruby/setup-ruby@v1
+    - name: install gems
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7
         bundler-cache: true
-    - uses: actions/cache@v2
+    - name: restore npm cache
+      uses: actions/cache@v2
       id: cache-npm
       with:
         path: ~/.npm
@@ -39,24 +42,26 @@ jobs:
       run: npm install
     - name: run node modules
       run: npm run build
-    - uses: actions/cache@v2
+    - name: restore carthage cache 
+      uses: actions/cache@v2
       id: cache-carthage
       with:
         path: Carthage
         key: ${{ runner.os }}-carthage-${{ hashFiles('**/Cartfile.resolved') }}
         restore-keys: |
           ${{ runner.os }}-carthage-
-    - uses: olejnjak/carthage-workaround@v1
+    - name: bootstrap apllication services 
+      uses: olejnjak/carthage-workaround@v1
       if: steps.cache-carthage.outputs.cache-hit != 'true'
       with:
         action: bootstrap application-services --platform iOS --cache-builds
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Fix Up Private Github URLs
+    - name: fix up private Github URLs
       run: find . -type f \( -name '*.pbxproj' -o -name 'Package.swift' -o -name 'Package.resolved' \) -exec sed -i '' "s/https:\/\/github.com\/${GITHUB_REPOSITORY_OWNER}/https:\/\/${GITHUB_ACCESS_TOKEN}@github.com\/${GITHUB_REPOSITORY_OWNER}/g" {} \;
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.IOS_CORE_TOKEN }}
-    - name: Clean Packages
+    - name: clean packages
       run: xcodebuild -scheme Ecosia -project Client.xcodeproj clean
     - name: clone translations
       run: git clone https://github.com/mozilla-mobile/ios-l10n-scripts.git || exit 1
@@ -64,5 +69,5 @@ jobs:
       run: ./ios-l10n-scripts/import-locales-firefox.sh --release
     - name: setup content blocking scripts
       run: (cd content-blocker-lib-ios/ContentBlockerGen && swift run)
-    - name: Run unit tests
+    - name: run unit tests
       run: bundle exec fastlane scan
