deactivate other flaky tests

--- a/Client.xcodeproj/xcshareddata/xcschemes/Ecosia.xcscheme
+++ b/Client.xcodeproj/xcshareddata/xcschemes/Ecosia.xcscheme
@@ -176,6 +176,9 @@
                   Identifier = "SearchEnginesTests">
                </Test>
                <Test
+                  Identifier = "TabManagerStoreTests">
+               </Test>
+               <Test
                   Identifier = "TabManagerStoreTests/testAddedTabsAreStored()">
                </Test>
                <Test
