only execute on main branch

--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -2,7 +2,7 @@ name: UnitTests
 
 on:
   push:
-    branches: [ fix-unit-tests-2 ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
