--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -71,3 +71,8 @@ jobs:
       run: (cd content-blocker-lib-ios/ContentBlockerGen && swift run)
     - name: run unit tests
       run: bundle exec fastlane scan
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v2
+      with:
+        report_paths: '**/test_output/xml/report.junit'
+        github_token: ${{ secrets.GITHUB_TOKEN }}
