--- a/.github/workflows/UnitTests.yml
+++ b/.github/workflows/UnitTests.yml
@@ -20,19 +20,8 @@ jobs:
       with:
         ruby-version: 2.7
         bundler-cache: true
-    - name: restore npm cache
-      uses: actions/cache@v2
-      id: cache-npm
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    - name: install node modules
-      if: steps.cache-npm.outputs.cache-hit != 'true'
-      run: npm ci
-    - name: run node modules
-      run: npm run build
+    - uses: bahmutov/npm-install@v1.6.0
+    - run: npm run build
     - name: restore carthage cache 
       uses: actions/cache@v2
       id: cache-carthage
