--- a/Extensions/Entitlements/EcosiaBeta.entitlements
+++ b/Extensions/Entitlements/EcosiaBeta.entitlements
@@ -4,11 +4,11 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.ecosia.ecosiaapp</string>
+		<string>group.com.ecosia.ecosiaapp.firefox</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.ecosia.ecosiaapp</string>
+		<string>$(AppIdentifierPrefix)com.ecosia.ecosiaapp.firefox</string>
 	</array>
 </dict>
 </plist>
