--- a/Client/Configuration/Ecosia.xcconfig
+++ b/Client/Configuration/Ecosia.xcconfig
@@ -6,7 +6,7 @@
 #include "Release.xcconfig"
 
 MOZ_BUNDLE_DISPLAY_NAME = Ecosia Beta
-MOZ_BUNDLE_ID = com.ecosia.ecosiaapp.firefox
+MOZ_BUNDLE_ID = com.ecosia.ecosiaapp
 CODE_SIGN_ENTITLEMENTS = Client/Entitlements/Ecosia.entitlements
 OTHER_SWIFT_FLAGS = $(OTHER_SWIFT_FLAGS_common) -DMOZ_CHANNEL_RELEASE
 MOZ_INTERNAL_URL_SCHEME = ecosia
