Disable ecosia bookmarks tests

--- a/Client.xcodeproj/xcshareddata/xcschemes/Ecosia.xcscheme
+++ b/Client.xcodeproj/xcshareddata/xcschemes/Ecosia.xcscheme
@@ -173,6 +173,9 @@
                   Identifier = "DefaultSearchPrefsTests">
                </Test>
                <Test
+                  Identifier = "EcosiaBookmarkTests">
+               </Test>
+               <Test
                   Identifier = "SearchEnginesTests">
                </Test>
                <Test
