--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -148,8 +148,13 @@
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>splash</string>
+		<key>UIImageName</key>
+		<string>ecosiaLogoLaunch</string>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
